<resources>
    <string name="app_name">Production Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="SignOut">Sign out</string>

    <!--  Menu item  -->
    <string name="menu_home">Home</string>
    <string name="menu_notification_hours">Hours Notifications</string>
    <string name="menu_presence">Presence Declaration</string>
    <string name="menu_scrap">Scrap Declaration</string>
    <string name="menu_group">My Group</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_historic">Presence Historic</string>

    <string name="_15_13_21">15-13-21</string>

    <string-array name="lines">
        <item>Line 1</item>
        <item>Line 2</item>
        <item>Line 3</item>
        <item>Line 4</item>
    </string-array>
    <string-array name="shift">
        <item>Night</item>
        <item>Morning</item>
        <item>Evening</item>
    </string-array>

    <string-array name="state">
        <item>Present</item>
        <item>Retard</item>
        <item>Absent</item>
        <item>Authorized</item>
        <item>Furlough</item><!-- congé-->
        <item>Sick</item><!-- malade-->
        <item>Transfer</item>
        <item>Suspension</item>
        <item>Maternity</item>
    </string-array>
    <string-array name="filter">
        <item>Between two dates</item>
        <item>OF</item>
    </string-array>

    <string-array name="OF">
        <item>OF 1</item>
        <item>OF 2</item>
        <item>OF 3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>