<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/notification_fragment"
            android:icon="@drawable/ic_notifications_24"
            android:title="@string/menu_notification_hours" />
        <item
            android:id="@+id/presence_fragment"
            android:icon="@drawable/ic_supervised_user_circle_24"
            android:title="@string/menu_presence" />
        <item
            android:id="@+id/scarp_fragment"
            android:icon="@drawable/ic_scrap"
            android:title="@string/menu_scrap" />
        <item
            android:id="@+id/group_fragment"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_group" />
        <item
            android:id="@+id/statistics_fragment"
            android:icon="@drawable/ic_bar_chart"
            android:title="@string/menu_statistics" />
    </group>
</menu>
